Mise à jour complète : images, logos, CSS et pages HTML - Ajout des images (camera.png, digi.png, logos SVG) - Application de la charte graphique sur toutes les pages - Mise à jour des couleurs et espacements - Ajout du .gitignore pour exclure node_modules

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -2,7 +2,8 @@
     <div class="navbar-container">
         <div class="flex items-center gap-4">
             <!-- Logo -->
-            <img src="assets/images/logo.png" alt="Melon-Soft Logo" class="navbar-logo" />
+            <img src="assets/images/logo/logo_bleu.svg" alt="Melon-Soft Logo" class="navbar-logo dark:hidden" />
+            <img src="assets/images/logo/logo_jaune.svg" alt="Melon-Soft Logo" class="navbar-logo hidden dark:block" />
         </div>
         
         <nav class="navbar-nav">
